--- a/Backend/server.env
+++ b/Backend/server.env
@@ -1,10 +1,10 @@
-PORT=3005
-NODE_ENV=localhost
-FRONTEND_URL=http://localhost:8005
+PORT=3400
+NODE_ENV=production
+FRONTEND_URL=http://44.223.23.145:8005
 DB_USER=postgres
-DB_HOST=localhost
+DB_HOST=postgres
 DB_NAME=new_employee_db
-DB_PASSWORD=Password@12345
+DB_PASSWORD=admin123
 DB_PORT=5432
 SESSION_SECRET=your_session_secret_here
 JWT_SECRET=your_jwt_secret_here
